--- a/src/ChooseUs.css
+++ b/src/ChooseUs.css
@@ -16,8 +16,7 @@ background-image:url("../public/assets/images/dash-img.png") ;
 height: 2px;
 width: 50px;
 margin-left: -25px;
-/* display: block; */
-/* position: absolute; */
+margin-bottom: 8px;
 }
 
 .vertical-line {
@@ -30,15 +29,10 @@ margin-left: -25px;
 
 .round{
 position: absolute;
-top: 50%;
 left: 50%;
 width: 22px;
 height: 22px;
 background-color: #fff;
-/* border-width: 6px;
-border-style: solid;
-border-radius: 50%;
-border-color: red; */
 margin-left: -10px;
 z-index: 1;
 }
@@ -49,11 +43,6 @@ position: relative;
 flex: 0 0 50%;
 justify-content: center;
 text-align: center;
-/* height: 30vh; */
-/* width: 100%; */
-/* flex-wrap: wrap; */
-
-/* padding-right:50px ; */
 }
 
 .textBox{
@@ -69,10 +58,8 @@ display: block;
 .h-line-dashed{
     background-image: url("../public/assets/images/time-line-dashed.png");
     position: absolute;
-    top: 50%;
     width: 30px;
     height: 2px;
-    margin-top: 10px;
 }
 
 .right {
