--- a/src/Technology.css
+++ b/src/Technology.css
@@ -1,8 +1,7 @@
-.container{
+/* .container{ */
     /* background-color: rgb(197, 199, 201); */
     /* height: 200px; */
-   
-}
+/* } */
 
 .box{
 -webkit-filter: grayscale(100%);
